Added features and CTA sections

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <script src="https://use.typekit.net/jzp3rzd.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
-  <title>Save, share and collaborate | Blocbox</title>
+  <title>Save, share and collaborate | Quube</title>
 </head>
 <body>
   <header>
@@ -23,7 +23,7 @@
   </nav>
   <div class="container hero">
     <h1>Save, share and collaborate.</h1>
-    <p>blocbox lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
+    <p>Quube lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
     <a href="signup.html" class="btn">Start Your Free Trial!</a>
     <img src="images/quube-macbook.png" alt="Quube" />
   </header>
@@ -42,7 +42,7 @@
     <div class="container">
       <div class="one-half">
         <h2>Save images</h2>
-        <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within blocbox.</p>
+        <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within Quube.</p>
       </div>
       <div class="one-half">
         <img src="images/save-images.png" alt="Save Images" />
@@ -54,33 +54,52 @@
       </div>
       <div class="one-half">
         <h2>Add links</h2>
-        <p>Forget bookmarking sites in your browser. With blocbox, you can add links, group them and view them from any computer.</p>
+        <p>Forget bookmarking sites in your browser. With Quube, you can add links, group them and view them from any computer.</p>
       </div>
     </div>
   </section>
   <!-- Features -->
   <section class="features">
+    <h2>Quube has the features you need, nothing else…</h2>
     <div class="container">
       <div class="one-third">
+      <img src="images/feature-cloud.png">
+      <h4>Cloud Storage</h4>
+      <p>Your data is stored in the cloud, accessible from anywhere.  Never lose your data again.</p>
       </div>
       <div class="one-third">
+      <img src="images/feature-collaborate.png">
+      <h4>Collaboration Tools</h4>
+      <p>With Quube you can share your content with whomever you like, whenever you like.</p>
       </div>
       <div class="one-third">
+      <img src="images/feature-devices.png">
+      <h4>Use Any Device</h4>
+      <p>Our platform is fully responsive, which means you can use any device to access your data.</p>
       </div>
     </div>
     <div class="container">
       <div class="one-third">
+      <img src="images/feature-favorites.png">
+      <h4>Organization Tools</h4>
+      <p>Place your content into Quubes or mark them as favorites.  There are many ways to orgazine your data.</p>
       </div>
       <div class="one-third">
+      <img src="images/feature-secure.png">
+      <h4>Industrial Strength Security</h4>
+      <p>The data stored on Quube is fully encrypted and safe from from prying eyes.</p>
       </div>
       <div class="one-third">
+      <img src="images/feature-gluten-free.png">
+      <h4>Gluten Free</h4>
+      <p>Quube is 100% gluten free.  Just kidding, we just wanted to see if you’re paying attention.</p>
       </div>
     </div>
   </section>
   <!-- Pricing -->
   <section class="pricing">
     <div class="container">
-      <h2>How much does blocbox cost?</h2>
+      <h2>How much does Quube cost?</h2>
       <p>We have many options to fit your needs. It's free to try for 30 days*, and you can always change your plan once you signed up. <br/>Here are the different features of each plan:</p>
     </div>
     <ul class="container">
@@ -130,25 +149,32 @@
   <!-- Testamonials -->
   <section class="testamonials">
     <div class="container">
-     <h2>Who uses blocbox?</h2>
-     <p>blocbox has more than 100,000 satisfied users storing and collaborating<br/> with teams across the world. Here's what a few have to say:</p>
+     <h2>Who uses Quube?</h2>
+     <p>Quube has more than 100,000 satisfied users storing and collaborating<br/> with teams across the world. Here's what a few have to say:</p>
     </div>
     <div class="container">
       <div class="one-half">
         <image src="images/quote.png">
-        <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blockquote>
+        <blockquote>"Quube has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blockquote>
         <img src="images/stella.png" alt="avatar">
         <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
       </div>
       <div class="one-half">
         <image src="images/quote.png">
-        <blockquote>"blocbox has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blockquote>
+        <blockquote>"Quube has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blockquote>
         <img src="images/jesse.png" alt="avatar">
         <p class="name"><strong>Jesser  T.</strong><br/>Freelance Designer, S. Dakota</p>
       </div>
     </div>
   </section>
-  <!-- Footer -->
+  <!-- CTA -->
+  <section class="calltoaction">
+    <div class="containter cta">
+    <h2>Start Saving Inspiring Content Today</h2>
+    <p>Signup for a free account, no credit card required!</p>
+    <a href="signup.html" class="btn">Start Your Free Trial!</a>
+  </section>
+    <!-- Footer -->
   <footer>
     <div class="container">
       <ul>
