--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
+  <title>Save, share and collaborate | Quube</title>
+  
+  <!-- Typekit Fonts -->
   <script src="https://use.typekit.net/jzp3rzd.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
-  <title>Save, share and collaborate | Quube</title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/font-awesome.css">
+  <link rel="stylesheet" href="css/amimate.css">
+  
 </head>
 <body>
   <header>
