--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
       <h2>How much does Quube cost?</h2>
       <p>We have many options to fit your needs. It's free to try for 30 days*, and you can always change your plan once you signed up. <br/>Here are the different features of each plan:</p>
     </div>
-    <ul class="container">
-      <li class="one-third">
+    <div class="container">
+      <div class="one-third">
         <div class="box">
           <h3>Casual</h3>
           <ul>
@@ -124,36 +124,36 @@
           <h1>Free</h1>
           <a href="signup.html" class="btn">Start Your Free Trial!</a>
         </div>
-      </li>
-    </ul>
-    <li class="one-third">
-      <div class="box middle">
-        <h3>Professional</h3>
-        <ul>
-          <li><stong>Unlimited</stong> Quubes</li>
-          <li><stong>20</stong> collaborators</li>
-          <li><strong>5GB</strong> of storage</li>
-          <li><stong>Real-time</stong> collaboration</li>
-        </ul>
-        <hr>
-        <h1><span>$</span>5 <span class="month">per month</span></h1>
-        <a href="signup.html" class="btn">Start Your Free Trial!</a>
       </div>
-    </li>
-    <li class="one-third">
-      <div class="box">
-        <h3>Expert</h3>
-        <ul>
-          <li><stong>Unlimited</strong> Quubes</li>
-          <li><stong>Unlimited</stong> collaborators</li>
-          <li><strong>Unlimited</strong> storage</li>
-          <li><stong>Real-time</stong> collaboration</li>
-        </ul>
-        <h1><span>$</span>10 <span class="month">per month</span></h1>
-        <a href="signup.html" class="btn">Start Your Free Trial!</a>
+      <div class="one-third">
+        <div class="box middle">
+          <h3>Professional</h3>
+          <ul>
+            <li><stong>Unlimited</stong> Quubes</li>
+            <li><stong>20</stong> collaborators</li>
+            <li><strong>5GB</strong> of storage</li>
+            <li><stong>Real-time</stong> collaboration</li>
+          </ul>
+          <hr>
+          <h1><span>$</span>5 <span class="month">per month</span></h1>
+          <a href="signup.html" class="btn">Start Your Free Trial!</a>
+        </div>
       </div>
-    </li>
-    </ul>
+      <div class="one-third">
+        <div class="box">
+          <h3>Expert</h3>
+          <ul>
+            <li><stong>Unlimited</strong> Quubes</li>
+            <li><stong>Unlimited</stong> collaborators</li>
+            <li><strong>Unlimited</strong> storage</li>
+            <li><stong>Real-time</stong> collaboration</li>
+          </ul>
+          <hr>
+          <h1><span>$</span>10 <span class="month">per month</span></h1>
+          <a href="signup.html" class="btn">Start Your Free Trial!</a>
+        </div>
+      </div>
+    </div>
   </section>
   <!-- Testamonials -->
   <section class="testamonials">
