--- a/index.html
+++ b/index.html
@@ -40,30 +40,33 @@
   <!-- Benefits -->
   <section class="benefits">
     <div class="container">
-      <div class="one-half">
+      <div class="benefits-small">
         <img src="images/create-notes.png" alt="Create Notes" />
       </div>
-      <div class="one-half">
-        <h2>Create notes</h2>
+      <div class="benefits-large">
+        <div class="vert" id="odd-benefit"><h2>Create notes</h2>
         <p>Using Markdown, you can create simple text-based documents to save and share. You can collaborate with others to write and edit content.</p>
+        </div>
       </div>
     </div>
     <div class="container">
-      <div class="one-half">
-        <h2>Save images</h2>
+      <div class="benefits-large">
+        <div class="vert" id="even-benefit"><h2>Save images</h2>
         <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within Quube.</p>
+        </div>
       </div>
-      <div class="one-half">
+      <div class="benefits-small">
         <img src="images/save-images.png" alt="Save Images" />
       </div>
     </div>
     <div class="container">
-      <div class="one-half">
+      <div class="benefits-small">
         <img src="images/add-links.png" alt="Add Links" />
       </div>
-      <div class="one-half">
-        <h2>Add links</h2>
+      <div class="benefits-large">
+        <div class="vert" id="odd-benefit"><h2>Add links</h2>
         <p>Forget bookmarking sites in your browser. With Quube, you can add links, group them and view them from any computer.</p>
+        </div>
       </div>
     </div>
   </section>
@@ -72,34 +75,34 @@
     <h2>Quube has the features you need, nothing else…</h2>
     <div class="container">
       <div class="one-third">
-      <img src="images/feature-cloud.png">
+      <div class="icon-box"><img src="images/feature-cloud.png"></div>
       <h4>Cloud Storage</h4>
       <p>Your data is stored in the cloud, accessible from anywhere.  Never lose your data again.</p>
       </div>
       <div class="one-third">
-      <img src="images/feature-collaborate.png">
+      <div class="icon-box"><img src="images/feature-collaborate.png"></div>
       <h4>Collaboration Tools</h4>
       <p>With Quube you can share your content with whomever you like, whenever you like.</p>
       </div>
       <div class="one-third">
-      <img src="images/feature-devices.png">
+      <div class="icon-box"><img src="images/feature-devices.png"></div>
       <h4>Use Any Device</h4>
       <p>Our platform is fully responsive, which means you can use any device to access your data.</p>
       </div>
     </div>
     <div class="container">
       <div class="one-third">
-      <img src="images/feature-favorites.png">
+      <div class="icon-box"><img src="images/feature-favorites.png"></div>
       <h4>Organization Tools</h4>
       <p>Place your content into Quubes or mark them as favorites.  There are many ways to orgazine your data.</p>
       </div>
       <div class="one-third">
-      <img src="images/feature-secure.png">
+      <div class="icon-box"><img src="images/feature-secure.png"></div>
       <h4>Industrial Strength Security</h4>
       <p>The data stored on Quube is fully encrypted and safe from from prying eyes.</p>
       </div>
       <div class="one-third">
-      <img src="images/feature-gluten-free.png">
+      <div class="icon-box"><img src="images/feature-gluten-free.png"></div>
       <h4>Gluten Free</h4>
       <p>Quube is 100% gluten free.  Just kidding, we just wanted to see if you’re paying attention.</p>
       </div>
@@ -113,12 +116,12 @@
     </div>
     <div class="container">
       <div class="one-third">
-        <div class="box">
+        <div class="box" id="leftbox">
           <h3>Casual</h3>
           <ul>
-            <li>Up to <stong>5</stong> boxes</li>
-            <li>Up to <stong>10</stong> collaborators</li>
-            <li><strong>2GB</strong> of storage</li>
+            <li><span class="heavy">5</span> Quubes</li>
+            <li><span class="heavy">10</span> collaborators</li>
+            <li><span class="heavy">2GB</span> of storage</li>
           </ul>
           <hr>
           <h1>Free</h1>
@@ -128,51 +131,68 @@
       <div class="one-third">
         <div class="box middle">
           <h3>Professional</h3>
-          <ul>
-            <li><stong>Unlimited</stong> Quubes</li>
-            <li><stong>20</stong> collaborators</li>
-            <li><strong>5GB</strong> of storage</li>
-            <li><stong>Real-time</stong> collaboration</li>
+          <ul id="middle">
+            <li><span class="heavy">Unlimited</span> Quubes</li>
+            <li><span class="heavy">20</span> collaborators</li>
+            <li><span class="heavy">5GB</span> of storage</li>
+            <li><span class="heavy">Real-time</span> collaboration</li>
           </ul>
           <hr>
-          <h1><span>$</span>5 <span class="month">per month</span></h1>
+          <h1><span class="dollar">$</span>5</h1>
+          <span class="month">per month</span>
           <a href="signup.html" class="btn">Start Your Free Trial!</a>
         </div>
       </div>
       <div class="one-third">
-        <div class="box">
+        <div class="box" id="rightbox">
           <h3>Expert</h3>
           <ul>
-            <li><stong>Unlimited</strong> Quubes</li>
-            <li><stong>Unlimited</stong> collaborators</li>
-            <li><strong>Unlimited</strong> storage</li>
-            <li><stong>Real-time</stong> collaboration</li>
+            <li><span class="heavy">Unlimited</span> Quubes</li>
+            <li><span class="heavy">Unlimited</span> collaborators</li>
+            <li><span class="heavy">Unlimited</span> storage</li>
+            <li><span class="heavy">Real-time</span> collaboration</li>
           </ul>
           <hr>
-          <h1><span>$</span>10 <span class="month">per month</span></h1>
+          <h1><span class="dollar">$</span>10</h1>
+          <span class="month">per month</span>
           <a href="signup.html" class="btn">Start Your Free Trial!</a>
         </div>
       </div>
     </div>
+    <div class="container" id="no-charge">
+      *We will not collect your credit card information until your 30-day trial has ended.
+    </div>
   </section>
   <!-- Testamonials -->
-  <section class="testamonials">
+  <section class="testimonials">
     <div class="container">
      <h2>Who uses Quube?</h2>
      <p>Quube has more than 100,000 satisfied users storing and collaborating<br/> with teams across the world. Here's what a few have to say:</p>
     </div>
     <div class="container">
       <div class="one-half">
-        <image src="images/quote.png">
-        <blockquote>"Quube has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blockquote>
-        <img src="images/stella.png" alt="avatar">
-        <p class="name"><strong>Stella B.</strong><br/>Freelance Designer, N. Dakota</p>
+        <div class="quote">
+          <div class="quote-images">
+            <img src="images/quote.png">
+            <img src="images/stella.png" alt="avatar" id="avatar">
+          </div>
+          <div class="quote-text">
+            <p>"Quube has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</p>
+            <p class="name"><strong>Stella T.</strong> Freelance Designer, N. Dakota</p>
+          </div>
+        </div>
       </div>
       <div class="one-half">
-        <image src="images/quote.png">
-        <blockquote>"Quube has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</blockquote>
-        <img src="images/jesse.png" alt="avatar">
-        <p class="name"><strong>Jesser  T.</strong><br/>Freelance Designer, S. Dakota</p>
+        <div class="quote">
+          <div class="quote-images">
+            <img src="images/quote.png">
+            <img src="images/jesse.png" alt="avatar" id="avatar">
+          </div>
+          <div class="quote-text">
+            <p>"Quube has made it easier to find and keep things I love. I can share with other designers on my team and create new categories with awesome stuff. And creating simple text documents couldn't be easier."</p>
+            <p class="name"><strong>Jesse T.</strong> Freelance Designer, S. Dakota</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -183,7 +203,7 @@
     <p>Signup for a free account, no credit card required!</p>
     <a href="signup.html" class="btn">Start Your Free Trial!</a>
   </section>
-    <!-- Footer -->
+  <!-- Footer -->
   <footer>
     <div class="container">
       <ul>
