--- a/index.html
+++ b/index.html
@@ -198,25 +198,26 @@
   </section>
   <!-- CTA -->
   <section class="calltoaction">
-    <div class="containter cta">
-    <h2>Start Saving Inspiring Content Today</h2>
-    <p>Signup for a free account, no credit card required!</p>
-    <a href="signup.html" class="btn">Start Your Free Trial!</a>
+    <div class="containter">
+      <h2>Start Saving Inspiring Content Today</h2>
+      <p>Signup for a free account, no credit card required!</p>
+      <a href="signup.html" class="btn">Start Your Free Trial!</a>
+    </div>
   </section>
   <!-- Footer -->
   <footer>
-    <div class="container">
+    <div class="social-icons">
       <ul>
-        <li><img src="images/twitter.png"></li>
-        <li><img src="images/facebook.png"></li>
-        <li><img src="images/instagram.png"></li>
-        <li><img src="images/gplus.png"></li>
-        <li><img src="images/youtube.png"></li>
+        <li><a href=""><img src="images/twitter.png"></a></li>
+        <li><a href=""><img src="images/facebook.png"></a></li>
+        <li><a href=""><img src="images/instagram.png"></a></li>
+        <li><a href=""><img src="images/gplus.png"></a></li>
+        <li><a href=""><img src="images/youtube.png"></a></li>
       </ul>
     </div>
     <div class="container footer-nav-block">
       <div class="left-footer-block one-third">
-        <p class="copyright-block">&copy; 2016. <strong>Quube</strong> - All Rights Reserved.</p>
+        <p class="copyright-block">&copy; 2016. <span id="quube">Quube</span> - All Rights Reserved.</p>
       </div>
       <nav class="link-block middle-footer-block one-third">
         <ul>
