--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h1 class="animated fadeIn">Save, share and collaborate.</h1>
     <p>Quube lets you collect and sort information.<br/>Create simple notes, store images, and add links.</p>
     <a href="signup.html" class="btn">Start Your Free Trial!</a>
-    <img src="images/quube-macbook.png" alt="Quube" />
+    <img src="images/quube-macbook.png" alt="Quube" id="laptop" />
   </header>
   <main role="main">
   <!-- Benefits -->
@@ -49,14 +49,14 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="benefits-large">
-        <div class="vert" id="even-benefit"><h2>Save images</h2>
+    <div class="container" id="swap">
+      <div class="benefits-large" id="swap1">
+        <div class="vert" id="even-benefit" ><h2>Save images</h2>
         <p>Are there images you find interesting enough to save? Now you have a way to organize and store those within Quube.</p>
         </div>
       </div>
-      <div class="benefits-small">
-        <img src="images/save-images.png" alt="Save Images" />
+      <div class="benefits-small" id="swap2">
+        <img  src="images/save-images.png" alt="Save Images" />
       </div>
     </div>
     <div class="container">
@@ -167,7 +167,7 @@
   <section class="testimonials">
     <div class="container">
      <h2>Who uses Quube?</h2>
-     <p>Quube has more than 100,000 satisfied users storing and collaborating<br/> with teams across the world. Here's what a few have to say:</p>
+     <p>Quube has more than 100,000 satisfied users storing and collaborating with teams across the world. Here's what a few have to say:</p>
     </div>
     <div class="container">
       <div class="one-half">
@@ -198,7 +198,7 @@
   </section>
   <!-- CTA -->
   <section class="calltoaction">
-    <div class="containter">
+    <div class="containter-cta">
       <h2>Start Saving Inspiring Content Today</h2>
       <p>Signup for a free account, no credit card required!</p>
       <a href="signup.html" class="btn">Start Your Free Trial!</a>
@@ -206,7 +206,7 @@
   </section>
   <!-- Footer -->
   <footer>
-    <div class="social-icons">
+    <div class="container social-icons">
       <ul>
         <li><a href=""><img src="images/twitter.png"></a></li>
         <li><a href=""><img src="images/facebook.png"></a></li>
