--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <h2>How much does Quube cost?</h2>
       <p>We have many options to fit your needs. It's free to try for 30 days*, and you can always change your plan once you signed up. <br/>Here are the different features of each plan:</p>
     </div>
-    <div class="container">
+    <div class="container" id="pricing-boxes">
       <div class="one-third">
         <div class="box" id="leftbox">
           <h3>Casual</h3>
@@ -131,7 +131,7 @@
       <div class="one-third">
         <div class="box middle">
           <h3>Professional</h3>
-          <ul id="middle">
+          <ul id="middle-list">
             <li><span class="heavy">Unlimited</span> Quubes</li>
             <li><span class="heavy">20</span> collaborators</li>
             <li><span class="heavy">5GB</span> of storage</li>
