--- a/dashboard.html
+++ b/dashboard.html
@@ -50,11 +50,21 @@
          <div class="settings">
            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/BillSKenney/128.jpg">
            <p>Brad Oliver</p>
-          <a href="#"> <i class="fa fa-cog"></i></a>
-         </div>
+           <ul class="menu">
+            <li>
+              <a href="#" id="cog"> <i class="fa fa-cog"></i></a>
+              <ul id="account">
+                  <li><a href="#"><i class="fa fa-cog"></i> Account Settings</a></li>
+                  <li><a href="#"><i class="fa fa-users"></i> Collaborators</a></li>
+                  <li><a href="#"><i class="fa fa-sign-out"></i> Sign Out</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>  
+        <div class="settings"> 
          <ul class="menu">
             <li>
-              <a href="#" class="btn add">+ Add</a>
+              <a href="#" class="btn add" id="cog">+ Add</a>
               <ul>
                   <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
                   <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
@@ -62,6 +72,9 @@
               </ul>
             </li>
           </ul>
+
+         </div>   
+
        </div>
      </div>
      <div class="container">
