--- a/dashboard.html
+++ b/dashboard.html
@@ -47,7 +47,7 @@
      <div class="container">
        <div class="header">
          <h1>All Items</h1>
-         <div class="settings">
+         <div class="settings" id="user">
            <img src="https://s3.amazonaws.com/uifaces/faces/twitter/BillSKenney/128.jpg">
            <p>Brad Oliver</p>
            <ul class="menu">
@@ -64,7 +64,7 @@
         <div class="settings"> 
          <ul class="menu">
             <li>
-              <a href="#" class="btn add" id="cog">+ Add</a>
+              <a href="#" class="btn add"">+ Add</a>
               <ul>
                   <li><a href="#"><i class="fa fa-file-o"></i> Note</a></li>
                   <li><a href="#"><i class="fa fa-picture-o"></i> Image</a></li>
